--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "transit-immutable-js",
+  "name": "transit-immutable-protobuf-js",
   "version": "0.4.0",
-  "description": "Transit serialisation for Immutable.js",
+  "description": "Transit serialization for Immutable.js and Protobufs",
   "main": "index.js",
   "scripts": {
     "test": "mocha",
@@ -10,17 +10,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/glenjamin/transit-immutable-js.git"
+    "url": "https://github.com/lunohq/transit-immutable-protobuf-js.git"
   },
-  "author": "Glen Mailer <glen@stainlessed.co.uk>",
+  "author": "Michael Hahn <michael@lunohq.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/glenjamin/transit-immutable-js/issues"
+    "url": "https://github.com/lunohq/transit-immutable-protobuf-js/issues"
   },
-  "homepage": "https://github.com/glenjamin/transit-immutable-js",
+  "homepage": "https://github.com/lunohq/transit-immutable-protobuf-js",
   "peerDependencies": {
     "immutable": ">= 3",
-    "transit-js": ">= 0.8"
+    "transit-js": ">= 0.8",
+    "protobufjs": "^4.1.3"
   },
   "devDependencies": {
     "chai": "^2.3.0",
