--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "homepage": "https://github.com/lunohq/transit-immutable-protobuf-js",
   "peerDependencies": {
     "immutable": ">= 3",
-    "transit-js": ">= 0.8",
-    "protobufjs": "^4.1.3"
+    "transit-js": ">= 0.8"
   },
   "devDependencies": {
     "chai": "^2.3.0",
@@ -31,6 +30,7 @@
     "immutable": "^3.7.4",
     "istanbul": "^0.3.14",
     "mocha": "^2.2.5",
-    "transit-js": "^0.8.807"
+    "transit-js": "^0.8.807",
+    "protobufjs": "^4.1.3"
   }
 }
